# rrtop

./: .gitignore  Cargo.toml  LICENSE  README.md  build-cross.sh  build-linux.sh
src/: app.rs  cli.rs  config.rs  connect.rs  connection.rs  error.rs  event.rs  logger.rs  main.rs  response.rs  terminal.rs  update.rs  workers.rs
src/colorscheme/: blackbird.rs  bw.rs  default.rs  dracula.rs  mod.rs  nord.rs  one_dark.rs  solarized_dark.rs  theme.rs
src/layout/: command.rs  full_screen.rs  home.rs  mod.rs  raw.rs  stat.rs
src/metric/: command.rs  cpu.rs  keyspace.rs  memory.rs  mod.rs  network.rs  server.rs  slow_log.rs  stats.rs  status.rs  throughput.rs
src/widget/: area_warning.rs  calls.rs  cpu.rs  cpu_sys.rs  cpu_user.rs  formatter.rs  hit_rate.rs  linegauge.rs  memory.rs  memory_sparkline.rs  menu.rs  mod.rs  navigation.rs  network.rs  raw.rs  slow_log.rs  sparkline.rs  stat.rs  status_bar.rs  throughput.rs
