[package]
name = "rrtop"
version = "0.1.0"
authors = ["Wojciech Żurek"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
redis = "0.20.2"
crossterm = "0.20"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
flume = "0.10"
chrono = "0.4"
size = "0.1"